# flask-pet

./: poetry.toml  pyproject.toml
src/: .env  Makefile  main.py
src/db/: utils.py
src/pet_project/: settings.py
